--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,6 +15,7 @@
             {% if current_user.is_authenticated %}
                 <li><a href="{{ url_for('account') }}">Account</a></li>
                 <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('edit_profile') }}">Edit profile</a></li>
             {% else %}
                 <li><a href="{{ url_for('login') }}">Login</a></li>
                 <li><a href="{{ url_for('register') }}">Register</a></li>
